--- a/ufc.css
+++ b/ufc.css
@@ -1,6 +1,30 @@
  * {
    box-sizing: border-box;
  }
+ nav ul {
+list-style-type: none;
+overflow: hidden;
+margin: 0px;
+padding: 0px;
+width: 100%;
+background-color: grey;
+ }
+ nav ul li {
+   display: block;
+   margin: 0;
+ }
+ nav ul a:hover{
+   background-color: #4CAF50;
+ }
+ li a{
+   text-decoration: none;
+   display: block;
+   text-align: center;
+   padding: 20px;
+   margin: 0px;
+   color: white;
+ }
+
  /*applying position to container for future positioning of search bar*/
  .container {
    position: relative;
@@ -52,6 +76,7 @@ label{
    color: black;
    margin-left: auto;
    margin-right: auto;
+   font-family: monospace;
  }
 #output th{
   height: auto;
@@ -59,13 +84,94 @@ label{
 }
 #output td{
   width: 20%;
-  border:1px solid white;
   height: 50px;
   font-size: 30px;
 }
 #full{
   text-decoration: underline;
 }
+#top0,#top1,#top2,#top3,#top4,#top5,#top6,#top7,#top8,#top9,#top10,#top11{
+  width: 33%;
+  float: left;
+
+}
+.heading {
+  font-size: 50px;
+  font-family: sans-serif;
+  text-align: center;
+  margin-top: 10px;
+}
+
+
+.modal, .modal1 {
+    display: none; /* Hidden by default */
+    position: fixed; /* Stay in place */
+    z-index: 1; /* Sit on top */
+    padding-top: 10px; /* Location of the box */
+    left: 0;
+    top: 0;
+    margin: auto;
+    width: 100%; /* Full width */
+    height: 100%; /* Full height */
+    overflow: auto; /* Enable scroll if needed */
+    background-color: rgb(0,0,0); /* Fallback color */
+    background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+}
+
+/* Modal Content */
+.modal-content, .modal-content1 {
+    background-color: #fefefe;
+    margin: auto;
+    padding: 20px;
+    border: 1px solid #888;
+    width: 100%;
+    height: 100%;
+    overflow: auto;
+}
+
+/* The Close Button */
+.close, .close1 {
+    color: #aaaaaa;
+    float: right;
+    font-size: 28px;
+    font-weight: bold;
+}
+
+.close:hover,
+.close:focus,
+.close1:hover,
+.close1:focus {
+    color: #000;
+    text-decoration: none;
+    cursor: pointer;
+}
+#response {
+  display: none;
+}
+#backtosearch{
+  width: 100%;
+  clear: left;
+  padding: 30px;
+  background-color: #4CAF50;
+  margin-top: 40px;
+}
+
+#player {
+    position: absolute;
+    top: 5%;
+    left: 5%;
+    width: 90%;
+    height: 90%;
+}
+button{
+  padding: 10px;
+  background-color: #008CBA;
+  border-radius: 5px;
+}
+button:hover{
+  box-shadow: 2px 2px 0px #f1f1f1;
+}
+
 /*reducing width of search bar to keep inline-block*/
 @media screen and (max-width: 1400px){
   #iname{
@@ -116,6 +222,7 @@ label{
    #output {
      margin-top: -140px;
    }
+
  }
  /*reducing size of font*/
  @media screen and (max-width: 500px){
@@ -127,3 +234,16 @@ label{
    }
 
  }
+@media screen and (max-width: 900px){
+  #top0,#top1,#top2,#top3,#top4,#top5,#top6,#top7,#top8,#top9,#top10,#top11{
+    width: 50%;
+  }
+}
+@media screen and (max-width: 600px){
+  #top0,#top1,#top2,#top3,#top4,#top5,#top6,#top7,#top8,#top9,#top10,#top11{
+    width: 100%;
+    top:0;
+    right:0;
+    margin:auto;
+  }
+}
