--- a/ufc.css
+++ b/ufc.css
@@ -222,6 +222,14 @@ button:hover{
    #output {
      margin-top: -140px;
    }
+   #player {
+       position: absolute;
+       top: 10%;
+       left: 10%;
+       width: 70%;
+       height: 70%;
+   }
+
 
  }
  /*reducing size of font*/
